--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -13,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build" 
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -26,7 +27,7 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
-    ], 
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
