--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -27,7 +28,7 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
-    ], 
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
